--- a/csharp/ColorPicker/Pages/Counter.razor
+++ b/csharp/ColorPicker/Pages/Counter.razor
@@ -7,10 +7,11 @@
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
 @code {
-    int currentCount = 0;
+    int currentCount;
 
     void IncrementCount()
     {
         currentCount++;
     }
+
 }
